# credit-risk-analytics-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sample_data/: populate_data.py
src/: engine.py  ingestion.py  main.py  modeling.py  reporting.py
templates/: report_style.css  report_template.html
