[project]
name = "credit-risk-analytics-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Khoa Ngo",email = "ngominhkhoa2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "typer (>=0.17.3,<0.18.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.1.0"
ruff = "^0.12.11"
