[tool.poetry]
name = "credit-risk-analytics-toolkit"
version = "0.1.0"
description = ""
authors = ["Khoa Ngo <ngominhkhoa2006@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.2"
pydantic = "^2.11.7"
typer = "^0.17.3"
weasyprint = "62.2"
jinja2 = "^3.1.6"
matplotlib = "^3.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"
black = "^25.1.0"
ruff = "^0.12.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
